name:                data-store
version:             0.0.0

synopsis:            A multi-key multi-value store with type-safe interface.

homepage:            

license:             BSD3
license-file:        LICENSE

author:              Petr Pilař
maintainer:          maintainer+the.palmik@gmail.com

category:            Data

build-type:          Simple
cabal-version:       >=1.6


library
  hs-source-dirs:      src
  exposed-modules:
      Data.Store
    , Data.Store.Key
    , Data.Store.Query
    , Data.Store.Query.Selection
  
  other-modules:
      Data.Store.Internal
    , Data.Store.Internal.Key
    , Data.Store.Internal.Index

    , Data.Vector.Extra

  build-depends:
      base       >= 4.5
    , vector     >= 0.9
    , containers >= 0.5
    , tagged     >= 0.4
    , mtl        >= 2.1

test-suite data-store-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests, src
  main-is:        Main.hs

  other-modules:
      Test.Data.Store

    , Data.Store    
  
  build-depends:
      base       >= 4.5
    , vector     >= 0.9
    , containers >= 0.5
    , tagged     >= 0.4
    , mtl        >= 2.1

    , test-framework             >= 0.6
    , test-framework-quickcheck2 >= 0.2
    , QuickCheck                 >= 2.5 && < 2.6
