name:                data-store
version:             0.2.0

synopsis:            A multi-key multi-value store with type-safe interface.

homepage:            

license:             BSD3
license-file:        LICENSE

author:              Petr Pilař
maintainer:          maintainer+the.palmik@gmail.com

category:            Data

build-type:          Simple
cabal-version:       >=1.6


library
  hs-source-dirs:      src
  exposed-modules:
      Data.Store
    , Data.Store.Selection
    , Data.Store.Storable
    
    , Data.Store.Internal.Type
    , Data.Store.Internal.Function
  
  other-modules:
      Data.Map.Extra
    , Data.IntSet.Extra

  build-depends:
      base       >= 4.6
    , vector     >= 0.10
    , containers >= 0.5

    , safecopy   >= 0.8
    , cereal     >= 0.3.5

  ghc-options: -O2 -Wall 

test-suite data-store-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests, src
  main-is:        Main.hs

  other-modules:
      Test.Data.Store01

    , Data.Store    
  
  build-depends:
      base       >= 4.6
    , vector     >= 0.10
    , containers >= 0.5
    , tagged     >= 0.4

    , test-framework             >= 0.8
    , test-framework-quickcheck2 >= 0.3
    , QuickCheck                 >= 2.4 && < 2.6

benchmark data-store-benchmark-01
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmarks/src, src
  main-is:        01.hs

  other-modules:
      Common
    , DS.B01
    , TS.B01


  build-depends:
      base       >= 4.5
    , vector     >= 0.9
    , containers >= 0.5
    , tagged     >= 0.4
    , mtl        >= 2.1

    , tables     >= 0.3
    , bytestring 
    , criterion  >= 0.6.2
    , deepseq    >= 1.3.0
    , random     >= 1.0.1
  
  ghc-options: -Wall -O2

