name:                data-store
version:             0.4.0.0

synopsis:    Type safe, in-memory dictionary with multidimensional keys.
description: Type safe, in-memory dictionary with multidimensional keys.
  Similar to ixset, higgsset, tables. But offers: type safe interface,
  auto-increment dimensions, specifying the relationships between the key dimension and the elements (one-one, one-many, many-one, many-many), performance.

homepage: https://github.com/Palmik/data-store

license:             BSD3
license-file:        LICENSE

author:              Petr Pilar
maintainer:          the.palmik+maintainer@gmail.com

category:            Data

build-type:          Simple
cabal-version:       >= 1.8

source-repository head
  type: git
  location: git://github.com/Palmik/data-store.git
  branch: master

library
  hs-source-dirs:      src
  exposed-modules:
      Data.Store
    , Data.Store.Selection
    , Data.Store.Storable
    , Data.Store.Lens

    , Data.Store.Internal.Type
    , Data.Store.Internal.Function

  other-modules:
      Data.Map.Extra
    , Data.IntSet.Extra

  build-depends:
      base         >= 4.8 && < 5
    , containers   >= 0.4 && < 1
    , lens         >= 3.9 && < 5
    , transformers >= 0.2 && < 0.4.3

    , cereal  
    , deepseq    >= 1.3.0 && < 1.4.2
    , safecopy   >= 0.8 && < 0.9.2
  ghc-options: -O2 -Wall

